# ts05

./: .gitignore  MANIFEST.in  README.md  __init__.py  native.py  numba.py  pyproject.toml  ts05_fixed.f  ts05_shim.f90
examples/: advanced.py  basic.py
ts05/: data.py
